rhelosp8/files/ovs/compute/etc/sysconfig/iptables
# Generated by iptables-save v1.4.21 on Mon Apr 11 12:45:30 2016
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [2:152]
-A INPUT -s 10.0.2.111/32 -p udp -m multiport --dports 4789 -m comment --comment "001 neutron tunnel port incoming neutron_tunnel_10.0.1.131_10.0.2.111" -j ACCEPT
-A INPUT -s 10.0.2.131/32 -p udp -m multiport --dports 4789 -m comment --comment "001 neutron tunnel port incoming neutron_tunnel_10.0.1.131_10.0.2.131" -j ACCEPT
-A INPUT -s 10.0.2.132/32 -p udp -m multiport --dports 4789 -m comment --comment "001 neutron tunnel port incoming neutron_tunnel_10.0.1.131_10.0.2.132" -j ACCEPT
-A INPUT -s 10.0.1.111/32 -p tcp -m multiport --dports 5900:5999 -m comment --comment "001 nova compute incoming nova_compute" -j ACCEPT
-A INPUT -s 10.0.1.131/32 -p tcp -m multiport --dports 16509,49152:49215 -m comment --comment "001 nova qemu migration incoming nova_qemu_migration_10.0.1.131_10.0.1.131" -j ACCEPT
-A INPUT -s 10.0.1.132/32 -p tcp -m multiport --dports 16509,49152:49215 -m comment --comment "001 nova qemu migration incoming nova_qemu_migration_10.0.1.131_10.0.1.132" -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
# Completed on Mon Apr 11 12:45:30 2016
